wip(MapsActivity): Validating record audio permission

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_maps">Map</string>
 
     <string name="map_not_ready">Map is not ready yet</string>
+    <string name="title_activity_test">TestActivity</string>
 </resources>
